--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Wg7K8iHC338?si=lStgCFFGCS7jgGYj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="links">
-                    <a href="https://www.history.com/topics/cold-war/cold-war-history" target="_blank" class="link-btn">🎖️ Guerras Proxy</a>
+                    <a href="https://es.wikipedia.org/wiki/Guerra_subsidiaria" target="_blank" class="link-btn">🎖️ Guerras Proxy</a>
                 </div>
             </div>
         </div>
